tests/error/error09.nex
class A
{
}

var a;
a = new A;

a.data = 27;
